# ksink

./: .gitignore  default.settings.toml  pyproject.toml
ksink/: __init__.py  app.py  batch.py  config.py  main.py
tests/: test_batch_serializer.py
tests/resources/: example.avro  example.avsc  example.json
